# arduino-system-monitor

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md  firmware.hex
common/: Cargo.toml
common/src/: lib.rs
driver/: Cargo.toml
driver/src/: main.rs
firmware/: Cargo.toml  LICENSE-MIT
firmware/src/: display.rs  joystick.rs  main.rs  protocol.rs  render.rs  system.rs
src/: main.rs
