[package]
name = "asm-firmware"
version = "0.1.0"
authors = ["roothunter <dev.roothunter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "asm-firmware"
test = false
bench = false

[dependencies]
asm-common = { path = "../common" }

nb = "1.1.0"
panic-halt = "1.0.0"
embedded-hal = "1.0"
ufmt = { version = "0.2.0", default-features = false }
ufmt-write = { version = "0.1.0", default-features = false }
heapless = { version = "0.9.2", default-features = false }
itoa = { version = "1", default-features = false }
avr-device = "0.7.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "5ccdd12d724d5b65273eb33a27cb55ab2ddcc865"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
strip = true
